--- a/content/posts/2023-02-11-new.md
+++ b/content/posts/2023-02-11-new.md
@@ -1,6 +1,7 @@
 ---
 thumbnail: uploads/tiger_balm_hoodie_back.jpg
-title: New
+image: static/tiger_balm_hoodie_back_white.jpg
+title: Hoodie
 date: 2023-02-11T19:26:40.320Z
 description: Description
 ---
